--- a/ApplicationRegulationPage.html
+++ b/ApplicationRegulationPage.html
@@ -1,58 +1,75 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>PaczPaczCar Regulation Page</title>
-    	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    	<meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-    	<meta name="apple-mobile-web-app-capable" content="yes"/>
-    	
-        <!-- Latest compiled and minified CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<head>
+    <title>PaczPaczCar Regulation Page</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-        <!-- Optional theme -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-        <!-- Latest compiled and minified JavaScript -->
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-        <link href="data/RegisterPage.css" type="text/css" rel="stylesheet"/>
-	</head>
-	<body>
-			<div class="container">
-                <div class="col-md-3 col-md-offset-6 col-sm-3 col-sm-offset-6">
-                    <div class="row">
-    				    <div class="col-md-offset-0 col-sm-offset-0">
-                		  <img src="data/logo.png" class="logo" ></img>
-            		    </div>
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+          integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous"></script>
+    <link href="data/RegisterPage.css" type="text/css" rel="stylesheet"/>
+</head>
+<body>
+<div class="container">
+    <div class="col-md-3 col-md-offset-6 col-sm-3 col-sm-offset-6 col-xs-offset-2 col-xs-12">
+        <div class="row">
+            <div class="col-md-offset-0 col-sm-offset-0">
+                <img src="data/logo.png" class="logo"></img>
+            </div>
+        </div>
+        <div class="row top-buffer-medium">
+            <div>
+                <div class="text-center">
+                    <h5>Please read and confirm below regulation:</h5>
+                </div>
+                <div class="text-long">
+                    <div>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla posuere varius varius. Morbi
+                        dapibus quam at blandit eleifend. Etiam dolor risus, blandit sed nisl nec, maximus rutrum eros.
+                        Nam cursus convallis orci eget feugiat. Interdum et malesuada fames ac ante ipsum primis in
+                        faucibus. Morbi pellentesque nisl dignissim elementum viverra. Nullam fermentum at urna sit amet
+                        lacinia. Sed ac massa sollicitudin, feugiat turpis in, pulvinar ipsum.
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla posuere varius varius. Morbi
+                        dapibus quam at blandit eleifend. Etiam dolor risus, blandit sed nisl nec, maximus rutrum eros.
+                        Nam cursus convallis orci eget feugiat. Interdum et malesuada fames ac ante ipsum primis in
+                        faucibus. Morbi pellentesque nisl dignissim elementum viverra. Nullam fermentum at urna sit amet
+                        lacinia. Sed ac massa sollicitudin, feugiat turpis in, pulvinar ipsum.
                     </div>
-                    <div class="row top-buffer-medium">
-                        <div>
-                            <div class="text-center">
-                                <h5>Please read and confirm below regulation:</h5>
-                            </div>
-                            <div class="text-long">
-                                <div>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla posuere varius varius. Morbi dapibus quam at blandit eleifend. Etiam dolor risus, blandit sed nisl nec, maximus rutrum eros. Nam cursus convallis orci eget feugiat. Interdum et malesuada fames ac ante ipsum primis in faucibus. Morbi pellentesque nisl dignissim elementum viverra. Nullam fermentum at urna sit amet lacinia. Sed ac massa sollicitudin, feugiat turpis in, pulvinar ipsum.
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla posuere varius varius. Morbi dapibus quam at blandit eleifend. Etiam dolor risus, blandit sed nisl nec, maximus rutrum eros. Nam cursus convallis orci eget feugiat. Interdum et malesuada fames ac ante ipsum primis in faucibus. Morbi pellentesque nisl dignissim elementum viverra. Nullam fermentum at urna sit amet lacinia. Sed ac massa sollicitudin, feugiat turpis in, pulvinar ipsum.
-                                </div>
-                            </div>
-                            <div class="form-group top-buffer-large">
-                                <div>
-                                    <button type="submit" onclick="location.href='LandingPage.html'" class="btn btn-primary submit-button">I accept</button>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <div>
-                                    <button type="submit" onclick="location.href='LoginPage.html'" class="btn btn-danger submit-button">Are you insane?</button>
-                                </div>
-                            </div>
-                            <div>
-                                <div class="text-center">
-                                <h5>PaczPaczCar 2018</h5>
-                            </div>
-                            </form>
-                        </div>    
-                        </div>
+                </div>
+                <div class="form-group top-buffer-large">
+                    <div>
+                        <button type="submit" onclick="location.href='LandingPage.html'"
+                                class="btn btn-primary submit-button">I accept
+                        </button>
                     </div>
-			</div>
-	</body>
+                </div>
+                <div class="form-group">
+                    <div>
+                        <button type="submit" onclick="location.href='LoginPage.html'"
+                                class="btn btn-danger submit-button">Are you insane?
+                        </button>
+                    </div>
+                </div>
+                <div>
+                    <div class="text-center">
+                        <h5>PaczPaczCar 2018</h5>
+                    </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
 </html>
