--- a/LoginPage.html
+++ b/LoginPage.html
@@ -1,58 +1,66 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Login Page</title>
-    	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    	<meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-    	<meta name="apple-mobile-web-app-capable" content="yes"/>
-    	
-        <!-- Latest compiled and minified CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<head>
+    <title>Login Page</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-        <!-- Optional theme -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+          integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-        <!-- Latest compiled and minified JavaScript -->
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-        <link href="data/RegisterPage.css" type="text/css" rel="stylesheet"/>
-	</head>
-	<body>
-			<div class="container">
-                <div class="col-md-3 col-md-offset-6 col-sm-3 col-sm-offset-6">
-                    <div class="row">
-    				    <div class="col-md-offset-0 col-sm-offset-0">
-                		  <img src="data/logo.png" class="logo login-logo" ></img>
-            		    </div>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous"></script>
+    <link href="data/RegisterPage.css" type="text/css" rel="stylesheet"/>
+</head>
+<body>
+<div class="container">
+    <div class="col-md-3 col-md-offset-6 col-sm-3 col-sm-offset-6 col-xs-offset-2 col-xs-12">
+        <div class="row">
+            <div class="col-md-offset-0 col-sm-offset-0">
+                <img src="data/logo.png" class="logo login-logo"></img>
+            </div>
+        </div>
+        <div class="row top-buffer-large">
+            <form class="form-horizontal">
+                <div class="form-group">
+                    <input id="inputMail" class="form-control" type="email" name="email" placeholder="EMAIL">
+                </div>
+                <div class="reset-margin-bottom form-group">
+                    <input id="password" class="form-control" type="text" name="password" placeholder="PASSWORD">
+                </div>
+                <div class="form-group">
+                    <h5><a href="ForgotPasswordPage.html">Forgot your Password?</a></h5>
+                </div>
+                <div class="form-group">
+                    <div>
+                        <button type="button" onclick="location.href='LandingPage.html'"
+                                class="btn btn-primary submit-button">Login
+                        </button>
                     </div>
-                    <div class="row top-buffer-large">
-                        <form class="form-horizontal">
-                            <div class="form-group">
-                        		<input id="inputMail" class="form-control" type="email" name="email" placeholder="EMAIL">
-                            </div>
-                            <div class="reset-margin-bottom form-group">
-                        		<input id="password" class="form-control" type="text" name="password" placeholder="PASSWORD">
-                            </div>
-                            <div class="form-group">
-                                <h5><a href="ForgotPasswordPage.html">Forgot your Password?</a></h5>
-                            </div>
-                            <div class="form-group">
-                                <div>
-                                    <button type="button" onclick="location.href='LandingPage.html'" class="btn btn-primary submit-button">Login</button>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <div>
-                                    <button type="button" onclick="location.href='RegisterPage.html'" class="btn btn-primary submit-button">Create an account</button>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <div class="text-center">
-                                <h5>PaczPaczCar 2018</h5>
-                            </div>
-                            </form>
-                        </div>    
-                        </div>
+                </div>
+                <div class="form-group">
+                    <div>
+                        <button type="button" onclick="location.href='RegisterPage.html'"
+                                class="btn btn-primary submit-button">Create an account
+                        </button>
                     </div>
-			</div>
-	</body>
+                </div>
+                <div class="form-group">
+                    <div class="text-center">
+                        <h5>PaczPaczCar 2018</h5>
+                    </div>
+            </form>
+        </div>
+    </div>
+</div>
+</div>
+</body>
 </html>
