--- a/RegisterPage.html
+++ b/RegisterPage.html
@@ -1,98 +1,109 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>RegisterPage</title>
-    	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    	<meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-    	<meta name="apple-mobile-web-app-capable" content="yes"/>
-    	<link href="data/RegisterPage.css" type="text/css" rel="stylesheet"/>
-        <!-- Latest compiled and minified CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+<head>
+    <title>RegisterPage</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link href="data/RegisterPage.css" type="text/css" rel="stylesheet"/>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-        <!-- Optional theme -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+          integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-        <!-- Latest compiled and minified JavaScript -->
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-        <script>
-            function goToRegultioPage() {
-                location.href="ApplicationRegulationPage.html";
-                document.getElementById("acceptRegulationChbx").checked = true;
-            }
-        </script>
-    </head>
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous"></script>
+    <script>
+        function goToRegultioPage() {
+            location.href = "ApplicationRegulationPage.html";
+            document.getElementById("acceptRegulationChbx").checked = true;
+        }
+    </script>
+</head>
 
-	<body>
-			<div class="container">
-                <div class="col-md-3 col-md-offset-6 col-sm-3 col-sm-offset-6">
-                    <div class="row">
-                        <div class="col-md-offset-0 col-sm-offset-0">
-                          <img src="data/logo.png" class="logo login-logo" ></img>
-                        </div>
+<body>
+<div class="container">
+    <div class="col-md-3 col-md-offset-6 col-sm-3 col-sm-offset-6 col-xs-offset-2 col-xs-12">
+        <div class="row">
+            <div class="col-md-offset-0 col-sm-offset-0">
+                <img src="data/logo.png" class="logo login-logo"></img>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-2 col-md-offset-1 col-sm-2 col-sm-offset-1">
+                <span class="glyphicon glyphicon-picture user-photo" aria-hidden="true"></span>
+            </div>
+            <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3">
+                <button type="button" class="btn btn-default add-photo-button">Add Photo</button>
+            </div>
+        </div>
+        <div class="row top-buffer-medium">
+            <form class="form-horizontal">
+                <div class="form-group">
+                    <!--<label for="inputFN">First Name</label>-->
+                    <input id="inputFN" class="form-control" type="text" name="firstName" placeholder="FIRST NAME">
+                </div>
+                <div class="form-group">
+                    <input id="inputLN" class="form-control" type="text" name="lastName" placeholder="LAST NAME">
+                </div>
+                <div class="form-group">
+                    <input id="inputMail" class="form-control" type="email" name="lastName" placeholder="EMAIL">
+                </div>
+                <div class="form-group">
+                    <!-- NA RAZIE TYPE="text", PONIEWAŻ PASSWORD KROPKUJE VALUE-->
+                    <input id="password" class="form-control" type="text" name="password" placeholder="PASSWORD">
+                </div>
+                <div class="form-group">
+                    <input id="confPassword" class="form-control" type="text" name="confirmPassword"
+                           placeholder="CONFIRM PASSWORD">
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-2 col-md-2 control-label">Birthdate</label>
+                    <div class="col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2">
+                        <input id="date" class="form-control" type="date" name="birthdate" placeholder="date">
                     </div>
-        		    <div class="row">
-                                <div class="col-md-2 col-md-offset-1 col-sm-2 col-sm-offset-1">
-                    			 <span class="glyphicon glyphicon-picture user-photo" aria-hidden="true"></span>
-                                </div>
-                                <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3">
-                    			 <button type="button" class="btn btn-default add-photo-button">Add Photo</button>
-                        </div>
-        		    </div>
-                <div class="row top-buffer-medium">
-                    <form class="form-horizontal">
-                        <div class="form-group">
-                            <!--<label for="inputFN">First Name</label>-->
-                    		<input id="inputFN" class="form-control" type="text" name="firstName" placeholder="FIRST NAME">
-                        </div>
-                        <div class="form-group">
-                    		<input id="inputLN" class="form-control" type="text" name="lastName" placeholder="LAST NAME">
-                        </div>
-                        <div class="form-group">
-                    		<input id="inputMail" class="form-control" type="email" name="lastName" placeholder="EMAIL">
-                        </div>
-                        <div class="form-group">
-                    		<!-- NA RAZIE TYPE="text", PONIEWAŻ PASSWORD KROPKUJE VALUE-->
-                    		<input id="password" class="form-control" type="text" name="password" placeholder="PASSWORD">
-                        </div>
-                        <div class="form-group">
-                            <input id="confPassword" class="form-control" type="text" name="confirmPassword" placeholder="CONFIRM PASSWORD">
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-2 col-md-2 control-label">Birthdate</label>
-                            <div class="col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2">
-                    		  <input id="date" class="form-control" type="date" name="birthdate" placeholder="date">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label class="col-sm-2 col-md-2 control-label">Gender</label>
-                            <div class="col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2">
-                            <label class="radio-inline">
-                              <input type="radio" name="gender" id="male" value="male"> Male
-                            </label>
-                            <label class="radio-inline">
-                              <input type="radio" name="gender" id="female" value="female"> Female
-                            </label>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class=" col-md-2 ">
-                                <label class="checkbox-inline form-group checkbox-left-position">
-                                    <input id="acceptRegulationChbx"type="checkbox" class="form-control" name="regulation">
-                                </label>
-                            </div>
-                            <button type="button" onclick="goToRegultioPage()" class="btn btn-primary submit-button col-md-8 button-right-position">Accept User's Regulationss</button>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-sm-offset-0 col-md-offset-0">
-                                <button type="button" onclick="location.href='ApplicationRegulationPage.html'" class="btn btn-primary submit-button">Sign me up</button>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                                <div class="text-center">
-                                <h5>PaczPaczCar 2018</h5>
-                            </div>
-                        </form>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-2 col-md-2 control-label">Gender</label>
+                    <div class="col-sm-8 col-sm-offset-2 col-md-8 col-md-offset-2">
+                        <label class="radio-inline">
+                            <input type="radio" name="gender" id="male" value="male"> Male
+                        </label>
+                        <label class="radio-inline">
+                            <input type="radio" name="gender" id="female" value="female"> Female
+                        </label>
                     </div>
-			</div>
-	</body>
+                </div>
+                <div class="form-group">
+                    <div class=" col-md-2 ">
+                        <label class="checkbox-inline form-group checkbox-left-position">
+                            <input id="acceptRegulationChbx" type="checkbox" class="form-control" name="regulation">
+                        </label>
+                    </div>
+                    <button type="button" onclick="goToRegultioPage()"
+                            class="btn btn-primary submit-button col-md-8 button-right-position">Accept User's
+                        Regulationss
+                    </button>
+                </div>
+                <div class="form-group">
+                    <div class="col-sm-offset-0 col-md-offset-0">
+                        <button type="button" onclick="location.href='ApplicationRegulationPage.html'"
+                                class="btn btn-primary submit-button">Sign me up
+                        </button>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="text-center">
+                        <h5>PaczPaczCar 2018</h5>
+                    </div>
+            </form>
+        </div>
+    </div>
+</body>
 </html>
