--- a/SuccesDeliveryPage.html
+++ b/SuccesDeliveryPage.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link href="data/LandingPage.css" type="text/css" rel="stylesheet"/>
     <link href="data/SuccessSending.css" type="text/css" rel="stylesheet"/>
     <!-- Latest compiled and minified CSS -->
@@ -22,7 +23,7 @@
 </head>
 <body>
 <div class="container">
-    <div class="col-md-3 col-md-offset-6 col-sm-3 col-sm-offset-6">
+    <div class="col-md-3 col-md-offset-6 col-sm-3 col-sm-offset-6 col-xs-offset-2 col-xs-12">
         <div class="row top-buffer">
             <div class="col-md-1 col-md-offset-1 col-sm-1 col-sm-offset-1">
                 <span class="glyphicon glyphicon-search search"></span>
