--- a/AccountSettingsPage.html
+++ b/AccountSettingsPage.html
@@ -55,8 +55,22 @@
                 </div>
             </div>
         </div>
-        <div class="row top-buffer">
-        #ADD SOME FAKE SETTING (LIKE NAME ETC ETC)
+        <div class="row top-buffer-medium">
+            <form class="form-horizontal">
+                <div class="form-group">
+                    <label class="col-sm-2 col-md-2 control-label" >Change email</label>
+                    <div class="col-sm-8 col-sm-offset-1 col-md-8 col-md-offset-1 col-xs-12">
+                        <input id="inputFN" class="form-control" type="text" name="firstName" placeholder="New email">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-2 col-md-2 control-label" >Change your localization</label>
+                    <div class="col-sm-8 col-sm-offset-1 col-md-8 col-md-offset-1 col-xs-12">
+                        <input id="inputLN" class="form-control" type="text" name="lastName" placeholder="New localization">
+                    </div>
+                </div>
+            </form>
+        </div>
     </div>
     </div>
 </div>
