--- a/Notifications/NotificationDetail4.html
+++ b/Notifications/NotificationDetail4.html
@@ -7,6 +7,9 @@
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
+    <!-- Font Awesome Icon Library -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -20,7 +23,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
             crossorigin="anonymous"></script>
-    <link href="data/styles.css" type="text/css" rel="stylesheet"/>
+    <link href="../data/styles.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
 <div class="container column-view">
@@ -29,44 +32,64 @@
             <div class="col-sm-8 col-sm-offset-1 col-md-8 col-md-offset-1 col-xs-12 remove-padding">
                 <div class="input-group">
                     <span class="input-group-btn padding-right">
-                        <button class="btn btn-default white-background remove-padding" type="button" onclick="location.href='LandingPage.html'">
-                            <img src="data/small_logo.PNG" class="small-image"></button>
+                        <button class="btn btn-default white-background remove-padding" type="button"
+                                onclick="location.href='../LandingPage.html'">
+                            <img src="../data/small_logo.PNG" class="small-image"></button>
                     </span>
 
                     <input type="text" class="form-control search-bar-height" placeholder="Search for...">
                     <span class="input-group-btn padding-left">
-                        <button class="btn btn-default white-background" type="button" onclick="location.href='NotificationsPage.html'">
+                        <button class="btn btn-default white-background" type="button"
+                                onclick="location.href='../NotificationsPage.html'">
                             <span class="glyphicon glyphicon-bell search search-icon large-icon"></span>
                         </button>
                     </span>
 
                     <span class="input-group-btn padding-left">
-                        <button class="btn btn-default white-background dropdown-toggle" type="button" data-toggle="dropdown">
+                        <button class="btn btn-default white-background dropdown-toggle" type="button"
+                                data-toggle="dropdown">
                             <span class="glyphicon glyphicon-menu-hamburger search search-icon large-icon"></span></button>
                         <ul class="dropdown-menu dropdown-menu-right">
-                            <li><a href="OrderHistoryDetailsPage.html">Your orders history</a></li>
-                            <li><a href="SendHistoryDetailsPage.html">Your sending history</a></li>
+                            <li><a href="../OrderHistoryDetailsPage.html">Your orders history</a></li>
+                            <li><a href="../SendHistoryDetailsPage.html">Your sending history</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="HelpPage.html">Help</a></li>
-                            <li><a href="AccountSettingsPage.html">Account settings</a></li>
-                            <li><a href="LogoutPage.html">Log Out</a></li>
+                            <li><a href="../HelpPage.html">Help</a></li>
+                            <li><a href="../AccountSettingsPage.html">Account settings</a></li>
+                            <li><a href="../LogoutPage.html">Log Out</a></li>
                         </ul>
                     </span>
                 </div>
             </div>
         </div>
         <div class="row top-buffer">
-           <h3 class="text-center offset-down"> Your Notifications </h3>
-        <ul class="list-group list-group-flush">
-            <li class="list-group-item" onclick="location.href='Notifications/NotificationDetail1.html'"><span class="glyphicon glyphicon-bell box"></span> Notification 1</li>
-            <li class="list-group-item" onclick="location.href='Notifications/NotificationDetail2.html'"><span class="glyphicon glyphicon-bell box"></span> Notification 2</li>
-            <li class="list-group-item" onclick="location.href='Notifications/NotificationDetail3.html'"><span class="glyphicon glyphicon-bell box"></span> Notification 3</li>
-            <li class="list-group-item" onclick="location.href='Notifications/NotificationDetail4.html'"><span class="glyphicon glyphicon-bell box"></span> Notification 4</li>
-            <li class="list-group-item" onclick="location.href='Notifications/NotificationDetail5.html'"><span class="glyphicon glyphicon-bell box"></span> Notification 5</li>
-        </ul>
+            <h3 class="text-center offset-down"> Notification from application</h3>
+        </div>
+
+
+        <div class="form-group">
+            <div class="panel panel-default data-container">
+                <div class="panel-body" id="boxes">Your package has been delivered!</div>
+            </div>
+        </div>
+
+        <div class="form-group order-details-container">
+            <button class="btn submit-button disable" type="button" onclick="location.href='../Notifications/NotificationDetail3.html'">
+                Previous notification
+            </button>
+
+            <button class="btn submit-button " type="button" onclick="location.href='../Notifications/NotificationDetail4.html'">
+                Next notification
+            </button>
+        </div>
+
+        <div class="form-group">
+            <button class="btn submit-button btn-primary" type="button"
+                    onclick="location.href='../NotificationsPage.html'">
+                Back to notifications
+            </button>
         </div>
     </div>
-    </div>
+</div>
 </div>
 </body>
 </html>
